fix low contrast in homepage

--- a/web/html/src/branding/css/uyuni/legacy-theme.less
+++ b/web/html/src/branding/css/uyuni/legacy-theme.less
@@ -430,7 +430,7 @@ header, nav.navbar-pf {
       // nodeLink and leafLink
       div.nodeLink,
       div.leafLink {
-        color: @gray-light;
+        color: @white;
         border-left: 3px solid transparent;
         a {
           display: block;
