--- a/web/html/src/branding/css/uyuni/legacy-variables.less
+++ b/web/html/src/branding/css/uyuni/legacy-variables.less
@@ -1,6 +1,7 @@
 // TODO: This should be merged with variables.less
 
 /* Main tags colours */
+@green-dark-1:           #008558;
 @green-dark:             #02A49C;
 @green:                  #00C081;
 @green-light:            #02D35F;
@@ -29,7 +30,7 @@
 @aside:                        @blue;
 @aside-border:                 lighten(@aside, 8%);
 @aside-menu-hyperlink:         @white;
-@aside-menu-active:            @green;
+@aside-menu-active:            @green-dark-1;
 
 /* aside menu search box */
 @aside-menu-search-clear:          fade(@gray, 60%);
